--- a/Datathon.ipynb
+++ b/Datathon.ipynb
@@ -1411,14 +1411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportamos el archivo\n",
     "file = pd.DataFrame(Y_predT, columns = [0])\n",
     "\n",
-    "file.to_csv('Arons159.csv', index = False, header=False)"
+    "file.to_csv('Arons159.csv', index = False)"
    ]
   }
  ],
