--- a/Datathon.ipynb
+++ b/Datathon.ipynb
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,12 +1411,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, ..., 1, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_predT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportamos el archivo\n",
-    "file = pd.DataFrame(Y_predT, columns = [0])\n",
+    "file = pd.DataFrame(Y_predT, columns = ['pred'])\n",
     "\n",
     "file.to_csv('Arons159.csv', index = False)"
    ]
